# TLAGP

./: README.md  index - 副本.html  index.html  pyproject.toml  webapp.py
crp/: bay.py  common.py  prompt.py  pset.py  read_data.py  run_crp.py  simulate.py  simulator_standalone.py
examples/: basic_regression.py  crp_colab_tutorial.py  task_template.py
src/TLAGP/: __init__.py  quickstart.py  runner.py  simulate.py  tools.py
src/llmgp/: __init__.py  easy.py  simulate.py
tests/: test_easy.py
ycs/: __init__.py  gp_manual_heuristics.py  gp_simulation.py  instance_generator_loader.py  my_gp.py  simulator_standalone.py  standard_gp.py
ycs/test_instances/: instance_4.000000_0.100000_12_0.json  instance_4.000000_0.100000_12_1.json  instance_4.000000_0.100000_12_10.json  instance_4.000000_0.100000_12_11.json  instance_4.000000_0.100000_12_12.json  instance_4.000000_0.100000_12_13.json  instance_4.000000_0.100000_12_14.json  instance_4.000000_0.100000_12_15.json  instance_4.000000_0.100000_12_16.json  instance_4.000000_0.100000_12_17.json  instance_4.000000_0.100000_12_18.json  instance_4.000000_0.100000_12_19.json  instance_4.000000_0.100000_12_2.json  instance_4.000000_0.100000_12_20.json  instance_4.000000_0.100000_12_21.json  instance_4.000000_0.100000_12_22.json  instance_4.000000_0.100000_12_23.json  instance_4.000000_0.100000_12_24.json  instance_4.000000_0.100000_12_25.json  instance_4.000000_0.100000_12_26.json  instance_4.000000_0.100000_12_27.json  instance_4.000000_0.100000_12_28.json  instance_4.000000_0.100000_12_29.json  instance_4.000000_0.100000_12_3.json  (+726 more)
(+93 files in other folders)
